Fixed Wikivoyage overlap between headers and content
Former-commit-id: d5bf25e58a6554721325076ca38c110187e88b74 [formerly 87d6376b7de3dbb0150bc0c6c6d78f6ec5b8e909]
Former-commit-id: 27ed4145e4a5ffe7c89a4f25834f9b7fcf247a73

--- a/www/-/s/css_modules/mobile.css
+++ b/www/-/s/css_modules/mobile.css
@@ -20,7 +20,7 @@ table.infobox th, table.infobox td { /*Added GK*/
 }
 
 .mw-body h2, .mw-body h3, .mw-body h4, .mw-body h5, .mw-body h6 {
-    padding: 0.5em 0;
+    padding: 0.5em 0 0;
 }
 .mw-body h3, .mw-body h2 {
     /*clear: both;*/
